@@ -7,9 +7,9 @@ java_import org.logstash.config.ir.graph.Graph
 module LogStash; class Compiler
   include ::LogStash::Util::Loggable
 
-  def self.compile_sources(*sources_with_metadata)
+  def self.compile_sources(sources_with_metadata, settings)
     graph_sections = sources_with_metadata.map do |swm|
-      self.compile_graph(swm)
+      self.compile_graph(swm, settings)
     end
 
     input_graph = Graph.combine(*graph_sections.map {|s| s[:input] }).graph
@@ -30,7 +30,7 @@ module LogStash; class Compiler
     PipelineIR.new(input_graph, filter_graph, output_graph, original_source)
   end
 
-  def self.compile_ast(source_with_metadata)
+  def self.compile_ast(source_with_metadata, settings)
     if !source_with_metadata.is_a?(org.logstash.common.SourceWithMetadata)
       raise ArgumentError, "Expected 'org.logstash.common.SourceWithMetadata', got #{source_with_metadata.class}"
     end
@@ -42,14 +42,15 @@ module LogStash; class Compiler
       raise ConfigurationError, grammar.failure_reason
     end
 
+    config.process_escape_sequences = settings.get_value("config.support_escapes")
     config.compile(source_with_metadata)
   end
 
-  def self.compile_imperative(source_with_metadata)
-    compile_ast(source_with_metadata)
+  def self.compile_imperative(source_with_metadata, settings)
+    compile_ast(source_with_metadata, settings)
   end
 
-  def self.compile_graph(source_with_metadata)
-    Hash[compile_imperative(source_with_metadata).map {|section,icompiled| [section, icompiled.toGraph]}]
+  def self.compile_graph(source_with_metadata, settings)
+    Hash[compile_imperative(source_with_metadata, settings).map {|section,icompiled| [section, icompiled.toGraph]}]
   end
 end; end
